--- a/foundation.data.science/capstone/proposal.Rmd
+++ b/foundation.data.science/capstone/proposal.Rmd
@@ -7,12 +7,12 @@ output: html_document
 
 # Capstone Proposal
 
-# What is the problem you want to solve?
+## 1: What is the problem you want to solve?
 
-# Who is your client and why do they care about this problem? In other words, what will your client DO or DECIDE based on your analysis that they wouldn’t have otherwise?
+## 2: Who is your client and why do they care about this problem? In other words, what will your client DO or DECIDE based on your analysis that they wouldn’t have otherwise?
 
-# What data are you going to use for this? How will you acquire this data?
+## 3: What data are you going to use for this? How will you acquire this data?
 
-#In brief, outline your approach to solving this problem (knowing that this might change later).
+## 4: In brief, outline your approach to solving this problem (knowing that this might change later).
 
-#What are your deliverables? Typically, this would include code, along with a paper and/or a slide deck.
+## 5: What are your deliverables? Typically, this would include code, along with a paper and/or a slide deck.
